tests/neg-macros/generic-num-lits.check
-- Error: tests/neg-macros/generic-num-lits.scala:2:8 ------------------------------------------------------------------
2 |val b = 0xcafebabe: BigDecimal // error
  |        ^
  |        FromDigits instance is incompatible with the expected numeric kind.
  |            Found:    scala.util.FromDigits.BigDecimalFromDigits.type(scala.util.FromDigits.BigDecimalFromDigits)
  |            Expected: scala.util.FromDigits.WithRadix[scala.math.BigDecimal]
  | This location is in code that was inlined at generic-num-lits.scala:2
-- Error: tests/neg-macros/generic-num-lits.scala:3:8 ------------------------------------------------------------------
3 |val c = 1.3: BigInt // error
  |        ^
  |        FromDigits instance is incompatible with the expected numeric kind.
  |            Found:    scala.util.FromDigits.BigIntFromDigits.type(scala.util.FromDigits.BigIntFromDigits)
  |            Expected: scala.util.FromDigits.Decimal[scala.math.BigInt]
  | This location is in code that was inlined at generic-num-lits.scala:3
-- Error: tests/neg-macros/generic-num-lits.scala:4:8 ------------------------------------------------------------------
4 |val d = 2e500: BigInt // error
  |        ^
  |        FromDigits instance is incompatible with the expected numeric kind.
  |            Found:    scala.util.FromDigits.BigIntFromDigits.type(scala.util.FromDigits.BigIntFromDigits)
  |            Expected: scala.util.FromDigits.Floating[scala.math.BigInt]
  | This location is in code that was inlined at generic-num-lits.scala:4
-- Error: tests/neg-macros/generic-num-lits.scala:7:7 ------------------------------------------------------------------
7 |  case 0xcafebabe: BigDecimal => // error
  |       ^
  |       FromDigits instance is incompatible with the expected numeric kind.
  |           Found:    scala.util.FromDigits.BigDecimalFromDigits.type(scala.util.FromDigits.BigDecimalFromDigits)
  |           Expected: scala.util.FromDigits.WithRadix[scala.math.BigDecimal]
  | This location is in code that was inlined at generic-num-lits.scala:7
-- Error: tests/neg-macros/generic-num-lits.scala:11:7 -----------------------------------------------------------------
11 |  case 1.3: BigInt => // error
   |       ^
   |       FromDigits instance is incompatible with the expected numeric kind.
   |           Found:    scala.util.FromDigits.BigIntFromDigits.type(scala.util.FromDigits.BigIntFromDigits)
   |           Expected: scala.util.FromDigits.Decimal[scala.math.BigInt]
   | This location is in code that was inlined at generic-num-lits.scala:11
-- Error: tests/neg-macros/generic-num-lits.scala:15:7 -----------------------------------------------------------------
15 |  case 2e500: BigInt => // error
   |       ^
   |       FromDigits instance is incompatible with the expected numeric kind.
   |           Found:    scala.util.FromDigits.BigIntFromDigits.type(scala.util.FromDigits.BigIntFromDigits)
   |           Expected: scala.util.FromDigits.Floating[scala.math.BigInt]
   | This location is in code that was inlined at generic-num-lits.scala:15
